# AutonomousDroneLanding

./: .gitignore  CMakeLists.txt  main.cpp
include/: LzFinder.h  ObjectDetector.h  labels.h  utils.h
scripts/: generate_config.py
src/: LzFinder.cpp  ObjectDetector.cpp  labels.cpp  main.cpp  utils.cpp
