cmake_minimum_required(VERSION 3.19)
project(FYPLanding)
set(CMAKE_CXX_STANDARD 17)
FIND_PACKAGE( OpenCV REQUIRED )
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O0")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0")
add_executable(FYPLanding src/main.cpp src/LzFinder.cpp include/LzFinder.h include/labels.h)
TARGET_LINK_LIBRARIES (FYPLanding ${OpenCV_LIBS})